Add Heading & add css variables for color scheme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Document</title>
+    <title>Language Selector</title>
   </head>
-  <body></body>
+  <body class="light button">
+    <div id="heading">
+      <h1>Language Selector</h1>
+      <p>What should you learn C#, Sift, or Ruby on Rails</p>
+      <p>We will help you find out!</p>
+      <button id="theme-button" class="dark-button"></button>
+    </div>
+  </body>
 </html>
