Add styling to heading

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <script src="js/scripts.js"></script>
     <title>Language Selector</title>
   </head>
-  <body class="light button">
-    <div id="heading">
-      <h1>Language Selector</h1>
-      <p>What should you learn C#, Sift, or Ruby on Rails</p>
-      <p>We will help you find out!</p>
-      <button id="theme-button" class="dark-button"></button>
+  <body class="light-body">
+    <div class="container">
+      <div id="heading">
+        <h1>Language Selector</h1>
+        <button id="theme-button" class="theme-btn-light">
+          <img src="images/moon.png" alt="icon of a moon" />
+        </button>
+        <p>What should you learn C#, Sift, or Ruby on Rails</p>
+        <p>We will help you find out!</p>
+      </div>
     </div>
   </body>
 </html>
