Finsihed styling for heading & started Js for survey questions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
         <p>What should you learn C#, Sift, or Ruby on Rails</p>
         <p>We will help you find out!</p>
       </div>
+      <div id="survey-questions" class="survey-light">
+        <div id="start-survey" class="survey-section">
+          <p>Click to start survey!</p>
+          <button class="btn btn-light">Start</button>
+        </div>
+        <div id="q1-survey" class="survey-section hidden">
+          <p>What do you prefer Mac or Windows?</p>
+          <select id="q1-input">
+            <option value="a">I only rock Mac</option>
+            <option value="b">Windows is the only correct answer</option>
+            <option value="c">Don't really care</option>
+          </select>
+          <button class="btn btn-light">Next</button>
+        </div>
+        <div id="q1-survey" class="survey-section hidden">
+          <p>Is performance Important to you?</p>
+          <select id="q1-input">
+            <option value="a">Yes Very</option>
+            <option value="b">
+              It can't be slow, but doesn't have to be exceptionly fast
+            </option>
+            <option value="c">Don't really care</option>
+          </select>
+          <button class="btn btn-light">Next</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
