Finsihed questions content for survey in HTML file

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           </select>
           <button class="btn btn-light">Next</button>
         </div>
-        <div id="q1-survey" class="survey-section hidden">
+        <div id="q2-survey" class="survey-section hidden">
           <p>Is performance Important to you?</p>
-          <select id="q1-input">
+          <select id="q2-input">
             <option value="a">Yes Very</option>
             <option value="b">
               It can't be slow, but doesn't have to be exceptionly fast
@@ -40,6 +40,42 @@
             <option value="c">Don't really care</option>
           </select>
           <button class="btn btn-light">Next</button>
+        </div>
+        <div id="q3-survey" class="survey-section hidden">
+          <p>Do you like building apps</p>
+          <select id="q3-input">
+            <option value="a">Yes I want to dominate the app store</option>
+            <option value="b">Maybe</option>
+            <option value="c">
+              I'd rather retype the entire bootstrap library
+            </option>
+          </select>
+          <button class="btn btn-light">Next</button>
+        </div>
+        <div id="q4-survey" class="survey-section hidden">
+          <p>How Important is a developer comminity to you?</p>
+          <select id="q4-input">
+            <option value="a">Yes I like a vibrant community</option>
+            <option value="b">As long as there is good documentation.</option>
+            <option value="c">
+              I want a comminity of developers that have been around for a long
+              time
+            </option>
+          </select>
+          <button class="btn btn-light">Next</button>
+        </div>
+        <div id="q5-survey" class="survey-section hidden">
+          <p>How big is the project your planning</p>
+          <select id="q5-input">
+            <option value="a">Small, but I plan to scale it up</option>
+            <option value="b">Larger than the Grand Canyon</option>
+            <option value="c">Smaller application</option>
+          </select>
+          <button class="btn btn-light">Next</button>
+        </div>
+        <div id="finish-survey" class="survey-finish hidden">
+          <p>Get Results!</p>
+          <button id="finish-survey" class="btn btn-light">Finish</button>
         </div>
       </div>
     </div>
