Now will show links to correct documentation in output for the proper language, also styled the output

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="theme-button" class="theme-btn-light">
           <img src="images/moon.png" alt="icon of a moon" />
         </button>
-        <p>What should you learn C#, Sift, or Ruby on Rails</p>
+        <p>What should you learn C#, Swift, or Ruby on Rails</p>
         <p>We will help you find out!</p>
       </div>
       <div id="survey-questions" class="survey-light">
@@ -77,6 +77,7 @@
           <p>Get Results!</p>
           <button id="finish-survey" class="btn btn-light">Finish</button>
         </div>
+        <div id="survey-output" class="survey-finish hidden"></div>
       </div>
     </div>
   </body>
