Survey now can be reset and ran again

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
           <p>Get Results!</p>
           <button id="finish-survey" class="btn btn-light">Finish</button>
         </div>
-        <div id="survey-output" class="survey-finish hidden"></div>
+        <div id="survey-output" class="survey-finish hidden">
+          <button id="restart-survey" class="btn btn-light">Restart</button>
+        </div>
       </div>
     </div>
   </body>
