Contact form now works and displays message after submitting

--- a/index.html
+++ b/index.html
@@ -90,19 +90,20 @@
             <input id="name-input" type="text" />
           </div>
           <div class="form-group">
-            <label for="name-input">Email: </label>
-            <input id="name-input" type="text" />
+            <label for="email-input">Email: </label>
+            <input id="email-input" type="text" />
           </div>
           <div class="form-group">
             <label for="name-input">Language: </label>
             <select id="language-input">
-              <option value="">Swift</option>
-              <option value="">C#</option>
-              <option value="">Ruby on Rails</option>
+              <option value="Swift">Swift</option>
+              <option value="C#">C#</option>
+              <option value="Ruby on Rails">Ruby on Rails</option>
             </select>
           </div>
           <button type="submit" class="btn btn-light">Submit</button>
         </form>
+        <div id="contact-output" class="hidden"></div>
       </div>
     </div>
   </body>
